GeckiumFlags - About page fixes and additions
- Fixed system architecture information not showing up in Linux;
- Added profile name to about page.

--- a/Profile Folder/chrome/windows/gflags/style.scss
+++ b/Profile Folder/chrome/windows/gflags/style.scss
@@ -172,3 +172,10 @@ label {
 		display: none;
 	}
 }
+
+@media not (-moz-platform: windows) {
+	#os-ux-button,
+	#os-comp-button {
+		display: none;
+	}
+}
